[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "MHWCamAI"
version = "0.1.0"
description = ""
authors = [
    {name = "ZahraAtasheneh", email = "zahra.atasheneh@yahoo.com"},
]
dependencies = [
    "uvicorn>=0.22.0",
    "pytest>=7.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
